tests/errors/type_info_array_01.f90
program type_info_array_01
    implicit none
    type(type_info) :: t(2)
end program type_info_array_01
